# hello-rocket-diesel-example

./: .gitignore  Cargo.toml  Rocket.toml  readme.md
migrations/2022-08-10-065717_todos/: up.sql
src/: error.rs  main.rs  schema.rs
src/controller/: todos.rs
src/db/: todos.rs
src/models/: todo.rs
