[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manife
[dependencies]
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"

rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"]}

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

